--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>GOLFER NAMES API</h1>
     <input type="text"></input>
     <button>Find Golfer</button>
-    <p>Please use localhost:8000/api/golfer-name</p>
+    <p>Please use https://golfer-names-api.vercel.app/api/golfer-name</p>
     <script src="js/main.js"></script>
 </body>
 </html>
